--- a/sample_config.json
+++ b/sample_config.json
@@ -9,6 +9,6 @@
   "verify": "<OPTIONAL: DEFAULT: true; Whether or not to verify SSL certificates>",
   "endpoint_url": "<OPTIONAL; See AWS Boto3 Session Documentation>",
   "aws_session_token": "OPTIONAL: The session token to use when creating the client",
-  "config": "<OPTIONAL: Advanced AWS client configuration options>"
-  "include_timestamp": "<OPTIONAL: DEFAULT "true" If "false" is passed, then the timestamp will be omitted from target filenames>"
+  "config": "<OPTIONAL: Advanced AWS client configuration options>",
+  "include_timestamp": "<OPTIONAL: DEFAULT 'true' If 'false' is passed, then the timestamp will be omitted from target filenames>"
 }
