Adding support for 1) nested objects and arrays 2)flattened records 3)Invalid avro characters

--- a/sample_config.json
+++ b/sample_config.json
@@ -11,4 +11,5 @@
   "aws_session_token": "OPTIONAL: The session token to use when creating the client",
   "config": "<OPTIONAL: Advanced AWS client configuration options>",
   "include_timestamp": "<OPTIONAL: DEFAULT 'true' If 'false' is passed, then the timestamp will be omitted from target filenames>"
+  "flatten_delimiter": "<OPTIONAL: DEFAULT '__' Change the separating string for flattened records>"
 }
